Added params, so each product will have a dynamic Url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -207,7 +207,7 @@
           <img src="./uploads/<%= cloth.imagename %>" class="  " alt="<%= cloth.imagename %>">
           <div class="card-body">
             <h5 class="card-title"><%=cloth.title.substring(0, 55)%>.....</h5>
-            <a href="#" class="btn btn-block">Go somewhere</a>
+            <a href="/product/<%=cloth.title%>" class="btn btn-block">Go somewhere</a>
           </div>
         </div>
       </div>
