--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -371,8 +371,8 @@
                 <td><%=row.description%></td>
                 <td><img src="./uploads/<%= row.imagename %>" /></td>
                 <td>
-                  <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                  <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                  <a href="#editEmployeeModal" class="edit" data-toggle="modal" value"<%row.id%>"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                  <a href="#deleteEmployeeModal" class="delete" data-toggle="modal" value"<%row.id%>"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                 </td>
               </tr>
             </tbody>
@@ -461,7 +461,7 @@
       <div class="modal-content">
         <form action="/delete" method="POST">
           <div class="modal-header">
-            <h4 class="modal-title">Delete Employee</h4>
+            <h4 class="modal-title">Delete Prodroduct</h4>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           </div>
           <div class="modal-body">
