--- a/views/product.ejs
+++ b/views/product.ejs
@@ -33,10 +33,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#"><i class="fas fa-crown"></i><strong> King Stiches</strong></a>
+      <a class="navbar-brand" href="/"><i class="fas fa-crown"></i><strong> King Stiches</strong></a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0 justify-content-end">
         <li class="nav-item active">
-          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
 
@@ -61,11 +61,7 @@
 
       <div class="col-lg-6">
 
-        <input type="text" name="" value="">
-        <input type="text" name="" value="">
-        <input type="text" name="" value="">
-        <input type="text" name="" value="">
-        <input type="text" name="" value="">
+        
       </div>
 
   </div>
